syntax = "proto3";

package  go.micro.service.user;
option go_package = "go.micro.service.user";

service  User {
  // 注册
  rpc Register(UserRegiterRequest) returns(UserRegiterReponse) {}
  // 登录
  rpc  Login(UserLoginRequest) returns (UserLoginReponse) {}
  // 查询用户信息
  rpc  GetUserInfo(UserInfoRequest) returns(UserInfoReponse){}
}

// 要传的参数
message  UserInfoRequest{
   string  user_name =1; // 用户名称
}
// 返回的参数
message  UserInfoReponse{
  int64  user_id  =1;
  string user_name = 2;
  string first_name =3;
}
// 注册
message    UserRegiterRequest {
  string user_name  =1;
  string first_name =2;
  string pwd = 3;
}

message UserRegiterReponse{
  string message  =1;
}

// 登录参数
message  UserLoginRequest {
  string user_name =1;  // 用户名
  string  pwd = 2; // 密码
}
// 登录返回
message UserLoginReponse{
   bool  is_success =1;
}





